# python-lrn

./: README.md  pyproject.toml
kata_1/: array.py  genexp.py  list.py  list_examples.py  numpy.py  perfcounter.py  stack.py  tuple.py
tests/: test_array.py  test_funcs.py  test_genexp.py  test_list.py  test_numpy.py  test_perfcounter.py  test_stack.py  test_tuple.py
