[tool.poetry]
name = "kata-1"
version = "0.1.0"
description = ""
authors = ["Cristian Mello <cristianc.mello@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pytest = "^7.4.2"
numpy = "^1.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
